--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,12 @@ body {
   margin: auto 0;
 }
 
+@media (max-device-width: 1150px), (max-width: 1150px) {
+  .home .bonus {
+    margin-right: 10px;
+  }
+}
+
 @media (min-width: 541px), (min-device-width: 541px) {
   .add-bonus-container .bonus-container,
   .history .bonus {
